--- a/practical_classes/aeda2021_p07/CMakeLists.txt
+++ b/practical_classes/aeda2021_p07/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(aeda2021_p07)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Tests)
+
 set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(lib/googletest-master)
